# module-syntax

./: .gitpod.yml  LICENCE  README.md  course.cabal  default.nix  module.cabal  module.nix
src/: Course.hs
test/: TastyLoader.hs
